ブロックの色と、コメントブロックの色

--- a/stages/test_30/style.css
+++ b/stages/test_30/style.css
@@ -120,7 +120,7 @@ pre {
 
 .blocklyTreeLabel {
     font-family: 'pixelmplus10regular', "Arimo", arial, verdana, sans-serif;
-    font-weight: normal;
+    font-weight: 900;
 }
 
 .blocklyText {
