--- a/stages/test_20/style.css
+++ b/stages/test_20/style.css
@@ -26,6 +26,7 @@ body {
     min-height: 75rem;
     padding-top: 3rem;
     font-family: 'pixelmplus10regular', "Arimo", arial, verdana, sans-serif;
+    font-size: 1.0em;
 }
 
 .flexbox {
@@ -63,6 +64,9 @@ body {
     font-weight: normal;
 }
 
+.btn-lg {
+    font-size: 1.0em;
+}
 
 /*---------------------------------
 	PRE & CODE
