--- a/stages/test_30/style.css
+++ b/stages/test_30/style.css
@@ -68,6 +68,17 @@ body {
     font-size: 1.0em;
 }
 
+
+/*---------------------------------
+	Bootstrap custmize
+-----------------------------------*/
+
+.bg-primary {
+    border-color: #13A097;
+    background-color: #13A097 !important;
+}
+
+
 /*---------------------------------
 	PRE & CODE
 -----------------------------------*/
