--- a/lib/common.css
+++ b/lib/common.css
@@ -12,7 +12,7 @@
 
 @font-face {
     font-family: 'pixelmplus10regular';
-    src: url('lib/fonts/pixel/pixelmplus10-regular.woff2') format('woff2'), url('lib/fonts/pixel/pixelmplus10-regular.woff') format('woff');
+    src: url('fonts/pixel/pixelmplus10-regular.woff2') format('woff2'), url('fonts/pixel/pixelmplus10-regular.woff') format('woff');
     font-weight: 400;
     font-style: normal;
 }
@@ -24,7 +24,7 @@
 
 body {
     min-height: 75rem;
-    padding-top: 8rem;
+    padding-top: 3.5rem;
     font-family: 'pixelmplus10regular', "Arimo", arial, verdana, sans-serif;
     font-size: 1.0em;
 }
@@ -95,7 +95,7 @@ body {
 
 .post {
     /*border: 1px solid #ccc;*/
-    padding: 30px 5% 30px 5%;
+    padding: 80px 5% 30px 5%;
     position: relative;
     background: #2B3E50;
 
@@ -103,9 +103,14 @@ body {
 }
 
 	h2.dot {
-	margin-top: -80px;
-	margin-left: -20px;
+	    margin-top: -100px;
+	    margin-left: -20px;
 	}
+
+    .post h3{
+        margin-top: 30px;
+        line-height: 140%
+    }
 
 	.post p{
         margin-top: 10px;
